--- a/scss/Base/_typography.scss
+++ b/scss/Base/_typography.scss
@@ -1,1 +1,18 @@
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script);
+
+// base font size
+body{
+font-size:16px;
+}
+
+h1{
+  font-size: 3em;
+}
+
+h2{
+  font-size: 2.5em;
+}
+
+h3{
+  font-size: 2em;
+}
