--- a/scss/Module/_header.scss
+++ b/scss/Module/_header.scss
@@ -5,7 +5,7 @@ header{
    background-repeat: no-repeat;
   h2 {
     margin-top: 0;
-    padding-top: 4em;
+    padding-top: 3em;
   }
 }
 
@@ -27,4 +27,13 @@ header > * {
   -webkit-mask-size: cover;
   background-color:  darken($font-color, 40%);
   opacity: .7;
+}
+
+.mailCaption{
+  text-align: right;
+  margin-top: 2em;
+  visibility: hidden;
+  position: fixed;
+  right: 0;
+  font-size: 1.5em;
 }
