--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
  * 2. Prevent adjustments of font size after orientation changes in IE and iOS.
  */
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script);
+@import url(https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic);
 html {
   font-family: sans-serif;
   /* 1 */
@@ -390,6 +391,13 @@ h3 {
   animation-iteration-count: infinite;
   animation-direction: alternate; }
 
+body {
+  background-color: #0d0d0d;
+  color: #e6e6e6;
+  text-align: center;
+  box-sizing: border-box;
+  font-family: 'Noto Serif', serif; }
+
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(..///img/background.jpg);
   height: 800px;
@@ -400,9 +408,7 @@ header {
     padding-top: 3em; }
 
 header > * {
-  font-family: 'Dancing Script', cursive;
-  text-align: center;
-  color: #e6e6e6; }
+  font-family: 'Dancing Script', cursive; }
 
 .logo {
   display: block;
@@ -440,7 +446,16 @@ html, body {
 #footer {
   clear: both;
   position: relative;
-  height: 54px;
-  background-color: pink; }
+  height: 54px; }
+
+.introduce {
+  background-color: #080808;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  /* Vertical center alignment */
+  justify-content: center;
+  width: 100%;
+  font-style: italic; }
 
 /*# sourceMappingURL=main.css.map */
