--- a/scss/Base/_variables.scss
+++ b/scss/Base/_variables.scss
@@ -6,5 +6,4 @@ $gradient1:  darken(rgba(252, 53, 53, 0.5), 90%);
 $gradient2: darken($gradient1, 10%);
 
 $font-color: darken(white, 10%);
-
-$mail: red;
+$background: black;
