--- a/scss/Base/_typography.scss
+++ b/scss/Base/_typography.scss
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script);
-
+@import url(https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic);
 // base font size
 body{
 font-size:16px;
