footer social icons

--- a/scss/Base/_variables.scss
+++ b/scss/Base/_variables.scss
@@ -7,3 +7,15 @@ $gradient2: darken($gradient1, 10%);
 
 $font-color: darken(white, 10%);
 $background: black;
+
+//footer height
+$footerHeight : 150px;
+
+$social1: #6A1487;
+
+%verticalMiddle {
+  display:flex;
+  align-items: center; /* Vertical center alignment */
+  justify-content: center;
+  width: 100%;
+}
