--- a/css/main.css
+++ b/css/main.css
@@ -366,6 +366,13 @@ textarea {
   font: inherit;
   /* 2 */ }
 
+footer, .introduce {
+  display: flex;
+  align-items: center;
+  /* Vertical center alignment */
+  justify-content: center;
+  width: 100%; }
+
 body {
   font-size: 16px; }
 
@@ -413,17 +420,19 @@ header > * {
 .logo {
   display: block;
   position: fixed;
-  right: 0;
+  top: 10px;
+  right: 10px;
   text-indent: -9999px;
   width: 3em;
   height: 3em;
-  -webkit-mask: url(../img/mail.svg) no-repeat;
-  mask: url(../img/mail.svg) no-repeat;
+  -webkit-mask: url(..//img/mail.svg) no-repeat;
+  mask: url(..//img/mail.svg) no-repeat;
   -webkit-mask-size: cover;
   background-color: gray;
   opacity: .7; }
 
 .mailCaption {
+  top: 10px;
   text-align: right;
   margin-top: 2em;
   visibility: hidden;
@@ -431,31 +440,31 @@ header > * {
   right: 0;
   font-size: 1.5em; }
 
-html, body {
-  height: 100%; }
+.wrapper {
+  min-height: calc(100vh - $footerHeight ); }
 
-#root {
-  clear: both;
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  margin-bottom: -54px; }
-  #root #root_footer {
-    height: 54px; }
+footer {
+  height: 150px; }
 
-#footer {
-  clear: both;
-  position: relative;
-  height: 54px; }
+.social li {
+  display: inline-block;
+  margin: 0 10px; }
+
+[class^="icon-"] {
+  display: block;
+  width: 32px;
+  height: 32px;
+  background: url("..//img/sprite.svg");
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden; }
+
+.icon-facebook {
+  background-position: 0 -32px; }
 
 .introduce {
   background-color: #080808;
   height: 200px;
-  display: flex;
-  align-items: center;
-  /* Vertical center alignment */
-  justify-content: center;
-  width: 100%;
   font-style: italic; }
 
 /*# sourceMappingURL=main.css.map */
