--- a/scss/Module/_header.scss
+++ b/scss/Module/_header.scss
@@ -16,18 +16,20 @@ header > * {
 .logo {
   display: block;
   position: fixed;
-  right: 0;
+  top: 10px;
+  right: 10px;
   text-indent: -9999px;
   width: 3em;
   height: 3em;
-  -webkit-mask: url(../img/mail.svg) no-repeat;
-  mask: url(../img/mail.svg) no-repeat;
+  -webkit-mask: url(../#{$imgPath}/mail.svg) no-repeat;
+  mask: url(../#{$imgPath}/mail.svg) no-repeat;
   -webkit-mask-size: cover;
   background-color:  darken($font-color, 40%);
   opacity: .7;
 }
 
 .mailCaption{
+  top:10px;
   text-align: right;
   margin-top: 2em;
   visibility: hidden;
