--- a/scss/Module/_footer.scss
+++ b/scss/Module/_footer.scss
@@ -25,5 +25,9 @@ footer {
 }
 
 .icon-facebook {
-  background-position: 0 -32px;
+  background-position: 0 -64px;
+}
+
+.icon-treehouse {
+  background-position: 0 -128px;
 }
