--- a/css/main.css
+++ b/css/main.css
@@ -440,9 +440,6 @@ header > * {
   right: 0;
   font-size: 1.5em; }
 
-.wrapper {
-  min-height: calc(100vh - $footerHeight ); }
-
 footer {
   height: 150px; }
 
@@ -464,6 +461,20 @@ footer {
 
 .icon-treehouse {
   background-position: 0 -128px; }
+
+html, body {
+  height: 100%; }
+
+.page-wrap {
+  min-height: 100%;
+  margin-bottom: -150px; }
+
+.page-wrap:after {
+  content: "";
+  display: block; }
+
+.site-footer, .page-wrap:after {
+  height: 150px; }
 
 .introduce {
   background-color: #080808;
